--- a/Editor.html
+++ b/Editor.html
@@ -46,7 +46,8 @@
                     <h1 class="fw-light">Video Editor</h1>
                     <p class="lead text-body-secondary">เคยรับงานเกี่ยวกับการต่อตัด Video
                         เป็นงานตัดต่อทั่วไปจากทางมหาวิทยาลัย และเป็นงานจากเด็กนิเทศศาสตร์โดยตรง
-                        โดยเริ่มรับเป็นงานตั้งแต่ช่วง ปี2</p>
+                        โดยเริ่มรับเป็นงานเสริมตั้งแต่ช่วง ปี2 ได้ฝึกเกี่ยวกับการจัดองค์ประกอบต่างๆ ซาวด์เอฟเฟค
+                        ซาวด์เสียง การใช้ลูกเล่นในการตัดต่อ</p>
 
                 </div>
             </div>
@@ -58,9 +59,11 @@
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card shadow-sm">
-                            <a href="https://www.youtube.com/watch?v=mN2EDrbQF-U&t=211s"><img class="bd-placeholder-img card-img-top" width="100%" height="225" img
-                                src="img/ตัดต่อ1.png" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice"style="object-fit: cover;"focusable="false"> </a>
+                            <a href="https://www.youtube.com/watch?v=mN2EDrbQF-U&t=211s"><img
+                                    class="bd-placeholder-img card-img-top" width="100%" height="225" img
+                                    src="img/ตัดต่อ1.png" role="img" aria-label="Placeholder: Thumbnail"
+                                    preserveAspectRatio="xMidYMid slice" style="object-fit: cover;" focusable="false">
+                            </a>
 
                             </img>
                             <div class="card-body">
@@ -75,12 +78,15 @@
 
                     <div class="col">
                         <div class="card shadow-sm">
-                            <a href="https://www.youtube.com/watch?v=vuUM7AE53_8&t=74s"><img class="bd-placeholder-img card-img-top" width="100%" height="225" img
-                                src="img/Highlight 33 ปี.png" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice"style="object-fit: cover;"focusable="false"> </a>
+                            <a href="https://www.youtube.com/watch?v=vuUM7AE53_8&t=74s"><img
+                                    class="bd-placeholder-img card-img-top" width="100%" height="225" img
+                                    src="img/Highlight 33 ปี.png" role="img" aria-label="Placeholder: Thumbnail"
+                                    preserveAspectRatio="xMidYMid slice" style="object-fit: cover;" focusable="false">
+                            </a>
 
                             <div class="card-body">
-                                <p class="card-text">Highlight 33 ปี ศิษย์ มทส. สัมพันธ์ ครั้งที่ 2 ณ ร่มประดู่ค่าเฟ่ ศรีราชา จ.ชลบุรี</p>
+                                <p class="card-text">Highlight 33 ปี ศิษย์ มทส. สัมพันธ์ ครั้งที่ 2 ณ ร่มประดู่ค่าเฟ่
+                                    ศรีราชา จ.ชลบุรี</p>
                                 <div class="d-flex justify-content-between align-items-center">
 
                                 </div>
@@ -89,12 +95,16 @@
                     </div>
                     <div class="col">
                         <div class="card shadow-sm">
-                            <a href="https://drive.google.com/file/d/1WLcBwk_AUrF9fVM55RAz5Qco3yfRY81d/view?usp=sharing"><img class="bd-placeholder-img card-img-top" width="100%" height="225" img
-                                src="img/Grabfood.png" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice"style="object-fit: cover;"focusable="false"></a>
+                            <a
+                                href="https://drive.google.com/file/d/1WLcBwk_AUrF9fVM55RAz5Qco3yfRY81d/view?usp=sharing"><img
+                                    class="bd-placeholder-img card-img-top" width="100%" height="225" img
+                                    src="img/Grabfood.png" role="img" aria-label="Placeholder: Thumbnail"
+                                    preserveAspectRatio="xMidYMid slice" style="object-fit: cover;"
+                                    focusable="false"></a>
 
                             <div class="card-body">
-                                <p class="card-text">ตลุยกินร้านเด็ดร้านดังย่านเชียงใหม่ไปกับส่วนลดมากมายกับ Grabfood <br>
+                                <p class="card-text">ตลุยกินร้านเด็ดร้านดังย่านเชียงใหม่ไปกับส่วนลดมากมายกับ Grabfood
+                                    <br>
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
 
