--- a/Design.html
+++ b/Design.html
@@ -97,13 +97,17 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">NERVER</h1>
+                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="margin-top: 50px;">NERVER</h1>
                     <p class="lead">NERVE
                         รับหน้าที่ในการ Developer สร้างเว๊ปไซต์โดยใช้ภาษา HTML , CSS , javascript โดยเว๊ปไซต์จะเกี่ยวกับข้อมูลทั่วไปของบริษัทว่า
                         ทำเกี่ยวกับอะไร มีผลงานอะไรบ้าง และสามารถติดต่อช่องทาง
                         ไหนบ้าง สามารถปรึกษาแผนสร้างสรรค์ผลงานได้
                         </Portal>
                     </p>
+
+                    <div class="d-flex gap-2 justify-content-end py-5">
+                        <a href="https://nervecreative.co.th/NERVE.html"> <button class="btn btn-primary rounded-pill px-3"style="font-size: 16px;"type="button">ดูเพิ่มเติม</button> </a>
+                    </div>
 
                 </div>
 
@@ -112,9 +116,6 @@
                         height="500" loading="lazy" style="border-radius: 15px;">
                 </div>
 
-                <div class="d-flex gap-2 justify-content py-5">
-                    <a href="https://nervecreative.co.th/NERVE.html"> <button class="btn btn-primary rounded-pill px-3"style="font-size: 16px;"" type="button">ดูเพิ่มเติม</button> </a>
-                      </div>
             </div>
         </div>
         <!-- End Hero -->
