--- a/Editor.html
+++ b/Editor.html
@@ -32,7 +32,7 @@
                 <li class="nav-item"><a href="Design.html" class="nav-link">UX/UIdesign</a></li>
                 <li class="nav-item"><a href="Editor.html" class="nav-link active" aria-current="page">VDO Editor</a>
                 </li>
-                <li class="nav-item"><a href="certificate.html" class="nav-link">เกียรติบัตร</a></li>
+                <li class="nav-item"><a href="certificate.html" class="nav-link">สัมฤทธิบัตร</a></li>
             </ul>
         </header>
     </div>
