--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">เกี่ยวกับฉัน</a></li>
                 <li class="nav-item"><a href="Design.html" class="nav-link">UX/UI design</a></li>
                 <li class="nav-item"><a href="Editor.html" class="nav-link">VDO Editor</a></li>
-                <li class="nav-item"><a href="certificate.html" class="nav-link">เกียรติบัตร</a></li>
+                <li class="nav-item"><a href="certificate.html" class="nav-link">สัมฤทธิบัตร</a></li>
             </ul>
         </header>
     </div>
@@ -63,64 +63,72 @@
     <div class="container">
         <h2 class="pb-2 border-bottom">SKILL</h2>
         <div class="col-lg-7">
-            <h3 class="display-10 fw-bold text-body-emphasis lh-1 mb-3">UI/UX Designer</h2>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
+            <h3 class="display-10 fw-semibold  text-body-emphasis lh-1 mb-3" style="margin-top: 50px;">UI/UX Designer</h2>
+                
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
                     style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Interaction Design</span>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
+
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
                     style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Wireframing</span>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
-                    style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Design
-                    system</span>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
+
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
+                    style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Designsystem</span>
+
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
                     style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Prototyping</span>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
+
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
                     style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Modals</span>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
-                    style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">User
-                    journeys</span>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
-                    style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">User
-                    Flows</span>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
+
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
+                    style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Userjourneys</span>
+
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
+                    style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">UserFlows</span>
+
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
                     style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Component</span>
-                <span class="badge bg-primary-subtle text-primary-emphasis rounded-pill"
+
+                <span class="badge bg-primary-subtle fw-normal text-primary-emphasis rounded-pill"
                     style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Mock-ups</span>
                 </p>
         </div>
 
-        <div class="col-lg-7">
-            <h2 class="display-10 fw-bold text-body-emphasis lh-1 mb-3">UX Research</h2>
-            <span class="badge bg-danger-subtle text-danger-emphasis rounded-pill"
-                style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Usability
-                Test</span>
-            <span class="badge bg-danger-subtle text-danger-emphasis rounded-pill"
-                style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">User
-                Intervention</span>
+        <div class="col-lg-7" style="margin-bottom: 10px;">
+            <h2 class="display-10 fw-semibold text-body-emphasis lh-1 mb-3">UX Research</h2>
+
+            <span class="badge bg-danger-subtle fw-normal text-danger-emphasis rounded-pill"
+                style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Usability Test</span>
+
+            <span class="badge bg-danger-subtle fw-normal text-danger-emphasis rounded-pill"
+                style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">User Intervention</span>
         </div>
 
-        <div class="col-lg-7">
-            <h2 class="display-10 fw-bold text-body-emphasis lh-1 mb-3">Development</h2>
-            <span class="badge bg-warning-subtle text-warning-emphasis rounded-pill"
+        <div class="col-lg-7" style="margin-top: 10px;">
+            <h2 class="display-10 fw-semibold text-body-emphasis lh-1 mb-3">Development</h2>
+
+            <span class="badge bg-warning-subtle fw-normal text-warning-emphasis rounded-pill"
                 style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">HTML</span>
-            <span class="badge bg-warning-subtle text-warning-emphasis rounded-pill"
+            <span class="badge bg-warning-subtle fw-normal text-warning-emphasis rounded-pill"
                 style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">CSS</span>
             </p>
         </div>
 
         <div class="col-lg-7">
-            <h2 class="display-10 fw-bold text-body-emphasis lh-1 mb-3">Design Tools</h2>
-            <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"
+            <h2 class="display-10 fw-semibold text-body-emphasis lh-1 mb-3">Design Tools</h2>
+
+            <span class="badge bg-dark-subtle fw-normal text-dark-emphasis rounded-pill"
                 style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Figma</span>
-            <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"
+            <span class="badge bg-dark-subtle fw-normal text-dark-emphasis rounded-pill"
                 style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Adobe
                 Photoshop</span>
-            <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"
+            <span class="badge bg-dark-subtle fw-normal text-dark-emphasis rounded-pill"
                 style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Adobe
                 Illustrator</span>
-            <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"
+            <span class="badge bg-dark-subtle fw-normal text-dark-emphasis rounded-pill"
                 style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Adobe Premiere
                 Pro</span>
-            <span class="badge bg-dark-subtle text-dark-emphasis rounded-pill"
+            <span class="badge bg-dark-subtle fw-normal text-dark-emphasis rounded-pill"
                 style="font-size: 18px; margin-right: 10px; margin-bottom: 10px;">Visual studio
                 code</span>
             </p>
