--- a/Design.html
+++ b/Design.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a href="Design.html" class="nav-link active" aria-current="page">UX/UI
                             design</a></li>
                     <li class="nav-item"><a href="Editor.html" class="nav-link">VDO Editor</a></li>
-                    <li class="nav-item"><a href="certificate.html" class="nav-link">เกียรติบัตร</a></li>
+                    <li class="nav-item"><a href="certificate.html" class="nav-link">สัมฤทธิบัตร</a></li>
                 </ul>
             </header>
         </div>
