--- a/certificate.html
+++ b/certificate.html
@@ -30,7 +30,7 @@
                 <li class="nav-item"><a href="index.html" class="nav-link">เกี่ยวกับฉัน</a></li>
                 <li class="nav-item"><a href="Design.html" class="nav-link">UX/UIdesign</a></li>
                 <li class="nav-item"><a href="Editor.html" class="nav-link">VDO Editor</a></li>
-                <li class="nav-item"><a href="certificate.html" class="nav-link active" aria-current="page">เกียรติบัตร</a></li>
+                <li class="nav-item"><a href="certificate.html" class="nav-link active" aria-current="page">สัมฤทธิบัตร</a></li>
             </ul>
         </header>
     </div>
